# Zapoctak2.0

./: .gitignore  CMakeLists.txt  README.md  datatypes.cpp  datatypes.h  documentation.md  main.cpp  model.cpp  model.h  parser.cpp  parser.h  render.cpp  render.h  tgaimage.cpp  tgaimage.h
src/: CMakeLists.txt  CSVParserStrategy.h  IParserStrategy.h  Makefile  WaveFrontParserStrategy.h  argparse.cpp  argparse.h  datatypes.cpp  datatypes.h  logging.cpp  logging.h  main.cpp  model.cpp  model.h  parser.cpp  parser.h  render.cpp  render.h  tgaimage.cpp  tgaimage.h
